--- a/DueDo/app/src/main/res/layout/activity_list.xml
+++ b/DueDo/app/src/main/res/layout/activity_list.xml
@@ -4,14 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="org.usablelabs.duedo.ListActivity">
 
-    <TextView
+    <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/newFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
+
 </RelativeLayout>
