added Task model; finished adding a new task

--- a/DueDo/app/src/main/res/layout/activity_form.xml
+++ b/DueDo/app/src/main/res/layout/activity_form.xml
@@ -19,19 +19,34 @@
         android:layout_below="@+id/toolbar_main"
         android:layout_gravity="center_horizontal">
 
-    <android.support.design.widget.TextInputLayout
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:id="@+id/titleEdit"
+                android:layout_gravity="center_horizontal"
+                android:hint="@string/task_title" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/titleEdit"
-            android:layout_gravity="center_horizontal"
-            android:hint="@string/task_title" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/contentEdit"
+                android:layout_gravity="center_horizontal"
+                android:hint="@string/task_content" />
 
-    </android.support.design.widget.TextInputLayout>
+        </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
 </RelativeLayout>
