--- a/DueDo/app/src/main/res/layout/activity_list.xml
+++ b/DueDo/app/src/main/res/layout/activity_list.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="org.usablelabs.duedo.ListActivity">
+    tools:context="org.usablelabs.duedo.ListActivity"
+    >
 
     <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />
 
@@ -17,5 +18,16 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/no_task"
+        android:id="@+id/emptyLabel"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/darker_gray"
+        android:visibility="gone"/>
 
 </RelativeLayout>
