finished all CRUD operations

--- a/DueDo/app/src/main/res/layout/activity_list.xml
+++ b/DueDo/app/src/main/res/layout/activity_list.xml
@@ -5,19 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="org.usablelabs.duedo.ListActivity"
-    >
+    tools:context="org.usablelabs.duedo.ListActivity">
 
     <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/newFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin" />
+    <ListView
+        android:id="@+id/listView"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_main"
+        android:visibility="gone"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,5 +27,14 @@
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/darker_gray"
         android:visibility="gone"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/newFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
 </RelativeLayout>
